--- a/.gitignore
+++ b/.gitignore
@@ -43,7 +43,10 @@ docs/api/
 .env
 
 # Starward
-public/assets/app.js
-public/assets/app.js.map
+public/assets/*
+!public/assets/css/
+!public/assets/fonts/
+!public/assets/images/
+!public/assets/sass/
 compiled
 config/app.js
