_DS_Store ignored in public folder

--- a/.gitignore
+++ b/.gitignore
@@ -45,8 +45,16 @@ docs/api/
 # Starward
 public/assets/*
 !public/assets/css/
+public/assets/css/.DS_Store
 !public/assets/fonts/
+public/assets/fonts/.DS_Store
 !public/assets/images/
+public/assets/images/.DS_Store
 !public/assets/sass/
+public/assets/sass/.DS_Store
+public/assets/sass/*/.DS_Store
+public/assets/sass/*/*/.DS_Store
+public/assets/sass/*/*/*/.DS_Store
+public/assets/sass/*/*/*/.DS_Store
 compiled
 config/app.js
