added ignore for build-generated styles.css

--- a/.gitignore
+++ b/.gitignore
@@ -46,7 +46,8 @@ docs/api/
 public/assets/*
 !public/assets/css/
 public/assets/css/.DS_Store
-public/assets/css/site.css
+public/assets/css/styles.css
+public/assets/css/styles.css.map
 !public/assets/fonts/
 public/assets/fonts/.DS_Store
 !public/assets/images/
