GraphQL Custom Schema and Queries added

--- a/.gitignore
+++ b/.gitignore
@@ -43,18 +43,20 @@ docs/api/
 .env
 
 # Starward
+compiled
+config/app.js
 public/assets/*
 !public/assets/css/
-public/assets/css/.DS_Store
 !public/assets/fonts/
-public/assets/fonts/.DS_Store
 !public/assets/images/
-public/assets/images/.DS_Store
 !public/assets/sass/
+
+# DS_Store :vomit:
+public/assets/css/.DS_Store
+public/assets/fonts/.DS_Store
+public/assets/images/.DS_Store
 public/assets/sass/.DS_Store
 public/assets/sass/*/.DS_Store
 public/assets/sass/*/*/.DS_Store
 public/assets/sass/*/*/*/.DS_Store
 public/assets/sass/*/*/*/.DS_Store
-compiled
-config/app.js
