--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build": "npm run clean && cross-env NODE_ENV=production webpack --colors --display-error-details --config ./webpack/webpack.config.prod.js"
   },
   "author": "Sam Logan",
-  "license": "Proprietary",
+  "license": "MIT License",
   "devDependencies": {
     "eslint": "^3.5.0",
     "eslint-config-airbnb": "^10.0.0",
