removed config files from source control

--- a/.gitignore
+++ b/.gitignore
@@ -59,7 +59,8 @@ public/assets/sass/*/*/.DS_Store
 public/assets/sass/*/*/*/.DS_Store
 public/assets/sass/*/*/*/.DS_Store
 compiled
-config/app.js
+app/config/app.js
+server/config/app.js
 
 # Webstorm
 .idea
