--- a/.eslintrc
+++ b/.eslintrc
@@ -1,12 +1,13 @@
 {
     "extends": "airbnb",
+    "parser": "babel-eslint",
     "env": {
         "browser": true,
         "node": true,
         "mocha": true
     },
  "parserOptions": {
-        "ecmaVersion": 6,
+        "ecmaVersion": 7,
         "sourceType": "module",
         "ecmaFeatures": {
             "forOf": true,
