--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "clean": "rimraf public/assets/app.js && rimraf public/assets/app.js.map && rimraf public/assets/*.ttf && rimraf public/assets/*.svg && rimraf public/assets/*.woff && rimraf compiled",
     "start": "npm run build && cross-env NODE_ENV=production node compiled/server.js",
     "dev": "cross-env NODE_ENV=development nodemon",
-    "dev-redis": "cross-env NODE_ENV=development REDIS_ENABLED=force-enable nodemon",
+    "dev:redis": "cross-env NODE_ENV=development REDIS_ENABLED=force-enable nodemon",
     "build:dev": "cross-env NODE_ENV=development webpack ---debug --colors --display-error-details --config ./webpack/webpack.config.dev-server.js",
     "build": "npm run clean && cross-env NODE_ENV=production webpack --colors --display-error-details --config ./webpack/webpack.config.prod.js",
     "analyse": "npm run clean && cross-env NODE_ENV=production webpack --colors --display-error-details --config ./webpack/webpack.config.analyse.js"
