--- a/.eslintrc
+++ b/.eslintrc
@@ -13,17 +13,18 @@
             "forOf": true,
             "jsx": true,
             "es6": true,
-            "experimentalObjectRestSpread" : true
+            "experimentalObjectRestSpread": true
         }
     },
     "rules": {
         "comma-dangle": 0,
         "indent": 0,
+        "new-cap": 0,
         "react/prop-types": 0,
-        "react/jsx-indent-props" : 0,
+        "react/jsx-indent-props": 0,
         "linebreak-style": 0,
-        "react/jsx-closing-bracket-location" : 0,
-        "object-curly-spacing" : 0,
+        "react/jsx-closing-bracket-location": 0,
+        "object-curly-spacing": 0,
         "arrow-body-style": 0,
         "no-console": 0,
         "max-len": 0,
