--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "file-loader": "^1.1.11",
     "graphql_json": "^1.0.0",
     "helmet": "^3.8.1",
+    "js-cookie": "^2.2.0",
     "json-loader": "^0.5.7",
     "method-override": "^2.3.9",
     "moment": "^2.17.1",
