--- a/package.json
+++ b/package.json
@@ -67,6 +67,8 @@
     "graphql_json": "^1.0.0",
     "helmet": "^3.8.1",
     "hoek": "^4.2.1",
+    "js-cookie": "^2.2.0",
+    "json-loader": "^0.5.7",
     "method-override": "^2.3.9",
     "moment": "^2.17.1",
     "query-string": "^6.1.0",
