--- a/.eslintrc
+++ b/.eslintrc
@@ -37,7 +37,8 @@
         "radix": 0,
         "prefer-spread": 0,
         "jsx-a11y/anchor-is-valid": 0,
-        "jsx-a11y/label-has-for": 0
+        "jsx-a11y/label-has-for": 0,
+        "react/no-danger": 0,
     },
     "plugins": [
         "react"
