--- a/package.json
+++ b/package.json
@@ -68,6 +68,8 @@
     "moment": "^2.17.1",
     "node-sass": "^4.3.0",
     "query-string": "^6.1.0",
+    "rc-slider": "^8.6.1",
+    "rc-tooltip": "^3.7.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-helmet": "^5.1.3",
