--- a/package.json
+++ b/package.json
@@ -19,53 +19,59 @@
   "author": "Sam Logan",
   "license": "MIT License",
   "devDependencies": {
+    "babel-cli": "^6.14.0",
+    "babel-core": "^6.25.0",
     "babel-eslint": "^7.2.3",
+    "babel-loader": "^7.1.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-react-constant-elements": "^6.5.0",
+    "babel-plugin-transform-react-inline-elements": "^6.6.5",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.8",
+    "babel-plugin-react-transform": "^2.0.2",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "css-loader": "^0.28.4",
     "eslint": "^4.9.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.5.1",
+    "extract-text-webpack-plugin": "4.0.0-beta.0",
+    "file-loader": "^1.1.11",
     "import-glob-loader": "^1.1.0",
+    "json-loader": "^0.5.7",
+    "node-sass": "^4.3.0",
     "nodemon": "1.17.5",
     "null-loader": "^0.1.1",
     "react-transform-catch-errors": "^1.0.2",
+    "redux-logger": "^3.0.6",
+    "rimraf": "^2.5.4",
+    "sass-loader": "^6.0.7",
+    "sass-resources-loader": "^1.3.3",
+    "style-loader": "^0.18.2",
+    "url-loader": "^0.5.9",
+    "webpack": "^4.1.0",
     "webpack-bundle-analyzer": "^2.8.3",
-    "webpack-cli": "^2.0.10"
+    "webpack-cli": "^2.0.10",
+    "webpack-dev-middleware": "^3.0.0",
+    "webpack-hot-middleware": "^2.21.2",
+    "webpack-manifest-plugin": "^2.0.3"
   },
   "engines": {
     "node": "4.x || 5.x || 6.x || 7.x || 8.x || 9.x"
   },
   "dependencies": {
     "axios": "^0.16.2",
-    "babel-cli": "^6.14.0",
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.1",
-    "babel-plugin-react-transform": "^2.0.2",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-react-constant-elements": "^6.5.0",
-    "babel-plugin-transform-react-inline-elements": "^6.6.5",
-    "babel-plugin-transform-react-remove-prop-types": "^0.4.8",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-es2015": "^6.14.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "bluebird": "^3.4.6",
     "body-parser": "^1.17.2",
     "compression": "^1.7.0",
     "cross-env": "^5.2.0",
-    "css-loader": "^0.28.4",
-    "es6-promise": "^3.1.2",
     "express": "^4.15.4",
-    "express-flash": "0.0.2",
-    "express-session": "^1.14.1",
-    "extract-text-webpack-plugin": "4.0.0-beta.0",
-    "file-loader": "^1.1.11",
     "graphql_json": "^1.0.0",
     "helmet": "^3.8.1",
-    "json-loader": "^0.5.7",
     "method-override": "^2.3.9",
     "moment": "^2.17.1",
-    "node-sass": "^4.3.0",
     "query-string": "^6.1.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
@@ -78,17 +84,6 @@
     "react-router-redux": "^5.0.0-alpha.6",
     "redis": "^2.7.1",
     "redux": "^3.7.2",
-    "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.0.1",
-    "rimraf": "^2.5.4",
-    "sass-loader": "^6.0.7",
-    "sass-resources-loader": "^1.3.3",
-    "style-loader": "^0.18.2",
-    "universal-style-loader": "^0.16.3",
-    "url-loader": "^0.5.9",
-    "webpack": "^4.1.0",
-    "webpack-dev-middleware": "^3.0.0",
-    "webpack-hot-middleware": "^2.21.2",
-    "webpack-manifest-plugin": "^2.0.3"
+    "redux-thunk": "^2.0.1"
   }
 }
