--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "dev:redis": "cross-env NODE_ENV=development REDIS_ENABLED=force-enable nodemon",
     "build:dev": "cross-env NODE_ENV=development npm run webpack -- --env.server",
     "build": "npm run clean && cross-env NODE_ENV=production npm run webpack -- --env.browser && cross-env NODE_ENV=production npm run webpack -- --env.server",
-    "webpack": "webpack --colors --display-error-details --config ./webpack/webpack.config.js",
+    "webpack": "webpack --colors --display-error-details --config ./webpack/webpack.config.js"
   },
   "author": "Sam Logan",
   "license": "MIT License",
@@ -65,6 +65,7 @@
     "body-parser": "^1.17.2",
     "compression": "^1.7.0",
     "cross-env": "^5.2.0",
+    "crypto-js": "^3.1.9-1",
     "express": "^4.15.4",
     "graphql_json": "^1.0.0",
     "helmet": "^3.8.1",
