--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "axios": "^0.16.2",
     "body-parser": "^1.17.2",
     "compression": "^1.7.0",
+    "cookie-parser": "^1.4.3",
     "cross-env": "^5.2.0",
     "crypto-js": "^3.1.9-1",
     "express": "^4.15.4",
