--- a/package.json
+++ b/package.json
@@ -51,10 +51,7 @@
     "sass-resources-loader": "^1.3.3",
     "style-loader": "^0.18.2",
     "url-loader": "^1.0.1",
-    "webpack": "^4.1.0",
     "webpack-cli": "^2.0.10",
-    "webpack-dev-middleware": "^3.0.0",
-    "webpack-hot-middleware": "^2.21.2",
     "webpack-manifest-plugin": "^2.0.3"
   },
   "engines": {
@@ -84,6 +81,9 @@
     "react-router-redux": "^5.0.0-alpha.6",
     "redis": "^2.7.1",
     "redux": "^3.7.2",
-    "redux-thunk": "^2.0.1"
+    "redux-thunk": "^2.0.1",
+    "webpack": "^4.1.0",
+    "webpack-dev-middleware": "^3.0.0",
+    "webpack-hot-middleware": "^2.21.2"
   }
 }
