--- a/.eslintrc
+++ b/.eslintrc
@@ -34,6 +34,7 @@
         "no-underscore-dangle": 0,
         "radix": 0,
         "prefer-spread": 0,
+        "object-curly-newline": 0,
         "jsx-a11y/anchor-is-valid": 0,
         "jsx-a11y/label-has-for": 0
     },
