--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "helmet": "^3.8.1",
     "js-cookie": "^2.2.0",
     "json-loader": "^0.5.7",
+    "lodash": "^4.17.11",
     "method-override": "^2.3.9",
     "moment": "^2.17.1",
     "query-string": "^6.1.0",
