--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "npm run build && cross-env NODE_ENV=production node compiled/server.js",
     "dev": "cross-env NODE_ENV=development nodemon",
     "dev:redis": "cross-env NODE_ENV=development REDIS_ENABLED=force-enable nodemon",
-    "build:dev": "cross-env NODE_ENV=development npm run webpack -- --env.server",
+    "build:dev": "npm run clean && cross-env NODE_ENV=production npm run webpack -- --env.browser && cross-env NODE_ENV=development npm run webpack -- --env.server",
     "build": "npm run clean && cross-env NODE_ENV=production npm run webpack -- --env.browser && cross-env NODE_ENV=production npm run webpack -- --env.server",
     "webpack": "webpack --colors --display-error-details --config ./webpack/webpack.config.js"
   },
